Version 30  2014-January-17

--Fixed typo in owner died message (thanks Pottage).

--Improved speed of power propagation code by a factor of 6, increasing the
  complexity of house electronics that can be simulated by the server.

--Reduced the maximum electronics step count to 32 (down from 256).  Once the
  step count limit has been reached, the electronics are assumed to be looping
  and are settled down into their lowest-seen states.  An example house that
  had electronics which took 16 steps to resolve, on a 108-move robbery, took
  1.5 seconds to simulate on the server.  Setting the max step count to 32 will
  limit the server load to simulations longer than about 3 seconds (also
  reducing client timeouts and retries).

--Added punchthrough on shroud edges where shroud partially obscures a mobile
  or family object that is actually visible.  No more almost-invisible pit
  bulls at the end of long, shadowy hallways.

--Brick can now be thrown to open a wooden door.

--Changed so that family members aren't paralyzed if their exit path is blocked
  by a dead body (they at least walk up to the dead body and stop).  This makes
  a body-blocked wife less defenseless (she can still walk to pick up her
  shotgun). 




Version 29  Live Server Fixes 

--Fixed server stats code to track new users as unique users for that day.

--Fixed so that retried endRobHouse requests that happen near the robbery
  timeout deadline push the deadline forward and do not result in the death of
  the robber (as long as the first endRobHouse request received by the server
  came in before the deadline).





Version 29  2014-January-14

--Improved shroud by thickening it over walls and moving it north to line up
  with the tops of walls instead of the bottoms of walls.  Obscures objects
  around corners much better now.

--Fixed some more narrow-gap visibility issues, forbidding islands of
  visibility surrounded by invisible areas.
