@@ -1,0 +1,15 @@
+<?php
+
+
+// database settings and such from main server
+include( "settings.php" );
+
+
+$startDate = "2014-01-20";
+
+
+$endDate = "2014-01-28";
+
+$totalUSDValue = "3000";
+
+?>
